compiler/testData/diagnostics/tests/multiplatform/topLevelFun/conflictingHeaderDeclarations.kt
// IGNORE_FIR_DIAGNOSTICS
// RUN_PIPELINE_TILL: FIR2IR
// MODULE: m1-common
// FILE: common.kt

<!CONFLICTING_OVERLOADS, CONFLICTING_OVERLOADS{JVM}!>expect fun <!NO_ACTUAL_FOR_EXPECT{JVM}!>foo<!>()<!>
<!CONFLICTING_OVERLOADS, CONFLICTING_OVERLOADS{JVM}!>expect fun <!NO_ACTUAL_FOR_EXPECT{JVM}!>foo<!>()<!>

expect fun <!NO_ACTUAL_FOR_EXPECT{JVM}!>foo<!>(x: Int)

// MODULE: m1-jvm()()(m1-common)
